# my_weekly_digest

./: README.md  environment.yml  pyproject.toml  requirements.txt
config/: keywords.json  llm_config.json  sources.json
data/raw/: arxiv_20250314.json  biorxiv_20250314.json  biweekly_digest_20250328.json  blogs_20250314.json
data/test/: scraper_test_20250328.json
scripts/: test_scrapers.py  weekly_run.sh
src/: main.py
src/analysis/: llm_processor.py
src/filtering/: keyword_filter.py
src/output/: blog_generator.py  pdf_generator.py
src/scrapers/: arxiv_scraper.py  biorxiv_scraper.py  blog_scraper.py
src/utils/: __init__.py  helpers.py
